Do home page, add bootstrap 4, fix after update bootstrap, update navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
-<!-- http://localhost:3000/?locale=en to load english version -->
-
-<p><%= t :hello %></p>
-
-
+<div class="fullscreen under-navbar flexbox home">
+  <%= image_tag "logo", height: 50 %>
+</div>
