--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,13 +1,14 @@
 /* Main navbar */
 .navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: absolute;
+  right: 0px;
+  top: 0px;
 }
 
 /* Logo */
@@ -38,7 +39,7 @@
 /* Navbar link */
 .navbar-wagon-link {
   color: #616668;
-  font-size: 14px;
+  font-size: 1rem;
 }
 .navbar-wagon-link:hover {
   color: #da552f;
@@ -55,8 +56,8 @@
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #999999 !important;
-  font-size: 15px !important;
-  line-height: 22px !important;
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
   padding: 10px 20px;
 }
 .navbar-wagon-dropdown-menu li > a:hover {
