--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,24 @@
 // Define variables for your color scheme
 
-// For example:
+// BASICS
 $red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+$blue: #2A336A;
 $orange: #E67E22;
 $green: #32B796;
-$gray: #000000;
+$white: white;
+
+// GRAY
+$dark-gray: #252A34;
+$gray: #D0D0D0;
+$medium-gray: #7E7E7E;
 $light-gray: #F4F4F4;
+
+// PARENTHEZE
+$purple : #9ACFDC;
+$light-purple: #4A1091;
+$bright-purple: #500EA1;
+$yellow : #DFB444;
+$light-yellow : #FFF74E;
+$pink: #CE1F5B;
+$light-blue : #9ACFDC;
+$water-green : #7CBB9F;
