--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,5 @@
-// Specific CSS for your home-page
+.home {
+  background-image: url("http://res.cloudinary.com/doodlid/image/upload/v1521889808/co-alumni/vecto-map.svg");
+  background-size: cover;
+  background-position: center center;
+}
