--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,22 @@
-<h2><%= t(".sign_up") %></h2>
+<div class="flex-parent"> <!-- for IE bug -->
+  <div class="fullscreen relative flexbox text-left" style="background-image: linear-gradient(0deg, rgba(42,51,106,0.9) 0%, rgba(42,51,106,0.8) 100%), url('http://res.cloudinary.com/doodlid/image/upload/v1521889808/co-alumni/vecto-map.svg')">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <div class="parentheze-login">
+      <%= render 'shared/sign_out_button' %>
+      <h4> S'enregistrer </h4>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: (t('devise.shared.minimum_password_length', count: @minimum_password_length) if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+        <div class="login-box">
+          <%= f.input :email, required: true, autofocus: true, label:"email", input_html: {value: session[:email] || "" } %>
+          <%= f.input :password, required: true, label: "mot de passe" %>
+          <%= f.input :password_confirmation, required: true, label: "confirmer le mot de passe" %>
+          <div class="form-actions">
+            <%= f.button :submit, "s'enregistrer", class:"margin-bottom-small" %>
+            <p class="text-center"><%= link_to t('.addon'), new_user_session_path %></p>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, t(".sign_up") %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
