--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <div class="fullscreen under-navbar flexbox home">
-  <%= image_tag "logo", height: 50 %>
+  <%= inline_svg('logo', class: 'world-map') %>
 </div>
