--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,9 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%#= image_tag "logo.png", height: 50 %>
+    <% unless current_page?(root_path) %>
+      <%= image_tag "logo.svg", height: 35 %>
+    <% end %>
   <% end %>
 
   <!-- Right Navigation -->
