Add component partials

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,14 @@
 // Import your components CSS files here.
 @import "alert";
+@import "button";
+@import "capsule";
+@import "contact";
+@import "event";
+@import "helpers";
+@import "layout";
+@import "mosaique";
+@import "portrait";
+@import "style";
 @import "navbar";
 @import "helpers";
 @import "contact_form";
