--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,10 +1,10 @@
 // Import your components CSS files here.
+@import "helpers";
 @import "alert";
 @import "button";
 @import "capsule";
-@import "contact";
+@import "contact_form";
 @import "event";
-@import "helpers";
 @import "layout";
 @import "mosaique";
 @import "portrait";
