--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,9 +6,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: absolute;
-  right: 0px;
-  top: 0px;
+  // position: absolute;
+  // right: 0px;
+  // top: 0px;
   width: 100%;
   background-color: white;
   z-index: 500;
