--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,4 +2,5 @@
   background-image: url("vecto-map.svg");
   background-size: cover;
   background-position: center center;
+  height: calc(100vh - 70px);
 }
