--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<div class="fullscreen under-navbar flexbox home">
+<div class="flexbox home">
   <%= inline_svg('logo', class: 'world-map') %>
 </div>
