--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,7 +13,7 @@ $gray: #D0D0D0;
 $medium-gray: #7E7E7E;
 $light-gray: #F4F4F4;
 
-// PARENTHEZE
+// CO-ALUMNI
 $purple : #9ACFDC;
 $light-purple: #4A1091;
 $bright-purple: #500EA1;
