--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,9 +8,9 @@
 @import "layout";
 @import "mosaique";
 @import "portrait";
-@import "style";
 @import "navbar";
 @import "helpers";
 @import "contact_form";
 @import "registration";
 @import "button";
+@import "badge";
