--- a/app/assets/stylesheets/components/_portrait.css.scss
+++ b/app/assets/stylesheets/components/_portrait.css.scss
@@ -7,9 +7,12 @@
   align-items: center;
   border-radius: 8px;
   box-shadow: $shadow;
+  text-align: center;
   .photo {
+    margin: auto;
     width: 125px;
     height: 125px;
+    margin-bottom: 20px;
     border-radius: 50%;
     background-position: center center;
     background-size: cover;
