--- a/app/views/shared/_button.html.erb
+++ b/app/views/shared/_button.html.erb
@@ -1,6 +1,6 @@
-<div class="btn btn-large">
+<!-- <div class="btn btn-large">
   <i class="fa fa-arrow-right rotate-at-click" aria-hidden="true"></i><%= calltoaction %>
-</div>
+</div> -->
 
 <%=link_to mail, 'mailto:'+mail ,class:"btn-large btn-hidden" %>
 <div class="btn-large btn-hidden"><%= phone %></div>
