--- a/app/views/shared/_event.html.erb
+++ b/app/views/shared/_event.html.erb
@@ -2,4 +2,5 @@
   <div class="line"></div>
   <p><%= date %></p>
   <p><strong><%= poste %></strong></p>
+  <p><strong><%= subtitle %></strong></p>
 </div>
