--- a/app/assets/stylesheets/components/_badge.scss
+++ b/app/assets/stylesheets/components/_badge.scss
@@ -2,7 +2,8 @@
   height: 75px;
   width: 75px;
   position: relative;
-  background-color: $white;
+  // background-color: $white;
+  box-shadow: 0 4px 17px 0 rgba(0, 0, 0, 0.27), 3px 4px 0 0 rgba(0, 0, 0, 0.23);
   border-radius: 50%;
   font-size: 40px;
   margin-right: 15px;
