--- a/app/assets/stylesheets/layouts/_dashboard.scss
+++ b/app/assets/stylesheets/layouts/_dashboard.scss
@@ -2,4 +2,9 @@
   min-height: calc(100vh - 70px);
   width: 100%;
   background-color: $blue;
+  .activities {
+    color: $white;
+    text-align: center;
+    margin: auto;
+  }
 }
