--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,37 +1,130 @@
-.btn-large {
-  width: 100%;
-  height: 50px;
-  background-color: $green;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
+.btn, input.btn, select.btn {
   color: white;
-  font-weight: 600;
-  margin-bottom: 10px;
-  box-shadow: $shadow;
-  &:hover{
-    text-decoration: none;
+  // background-color: $yellow;
+  border-radius: $border-radius;
+  height: auto !important;
+  height: $input-height; // for IE
+  min-height: $input-height;
+  border: none;
+  padding: $button-font-size 30px $button-font-size 30px;
+  // width: 100%;
+  margin: auto;
+  min-width: 200px;
+  box-shadow: none;
+  font-size: $button-font-size;
+  -webkit-box-shadow: none;
+  border-bottom:none;
+  cursor: pointer;
+  @include media-breakpoint-down(md) { white-space: normal; }
+  &.btn-calltoaction {
+    min-height: 75px;
+    font-size: 0.9em;
+  }
+  p {
+    margin-bottom: 0px;
+  }
+  &:hover {
+    background-color: $light-yellow;
     color: white;
-    font-size: 105%;
-    padding-top: 5px;
   }
-  .fa {
-    margin-right: 10px;
-    transition-duration: 0.8s;
-    transition-property: transform;
+  &.btn-tall {
+    min-height: 70px;
+    font-size: 24px;
+    width: 100%
   }
-  .rotated {
-    transform: rotate(90deg);
-    animation:spin 2s linear infinite;
+  &.btn-wrap {
+    white-space: normal;
+  }
+  &.btn-large {
+    max-width: 350px;
   }
 }
-.btn-hidden {
-  background-color: white;
-  color: $medium-gray;
-  &:hover {
-    color: $medium-gray;
-    text-decoration: none;
-    padding-top: 0px;
+
+.btn-submit{
+  &.btn, &.btn-default {
+    min-width: 60px;
+    width: 60px;
+    min-height: 60px;
+    border: none;
   }
+}
+.btn-slim, a.btn-slim {
+  color: white;
+  background-color: $pink;
+  border-radius: 40px;
+  height: 40px;
+  border: none;
+  padding: 0px 30px 0px 30px;
+  &:hover {
+    background-color: $yellow !important;
+    color: white;
+  }
+}
+.with-border {
+  border: 1px solid $dark-gray !important;
+}
+input {
+  &:focus {
+    border: none;
+  }
+}
+.btn-pink, .btn-2 {
+  background-color: $pink !important;
+}
+.btn-gray {
+  background-color: $dark-gray;
+}
+.btn-blue {
+  background-color: $blue;
+}
+.btn-light-blue, .btn-0 {
+  background-color: $light-blue !important;
+}
+.btn-red {
+  background-color: $red;
+}
+.btn-green {
+  background-color: $water-green;
+}
+.btn-yellow, .btn-1 {
+  background-color: $yellow !important;
+}
+.btn-inverse {
+  color: $dark-gray !important;
+  background-color: transparent !important;
+}
+input#case_photo {
+  color: white;
+  background-color: $pink;
+  border-radius: $border-radius;
+  height: 56px;
+  min-width: 280px;
+  border: none;
+  padding: 0px 30px 0px 30px;
+  max-width: 320px;
+  min-width: 300px;
+  box-shadow: none;
+  font-size: 24px !important;
+  -webkit-box-shadow: none !important;
+  border-bottom:none;
+  margin: 5px;
+  p {
+    margin-bottom: 0px;
+  }
+  &:hover {
+    background-color: $yellow;
+    color: white;
+  }
+  a {
+    color: white;
+  }
+}
+input, select {
+  min-height: $input-height;
+}
+.submit-hidden {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  visibility: hidden;
 }
