--- a/app/views/ambassador/users/show.html.erb
+++ b/app/views/ambassador/users/show.html.erb
@@ -4,7 +4,7 @@
       <div class="col-12 col-md-4">
         <div class="row">
           <div class="col-12">
-            <%= render "shared/portrait", name: @user.first_name + " " + @user.last_name , statut: @user.role, photo: @user.photo_url, coordinator: @user.coordinator %>
+            <%= render "shared/portrait", name: @user.first_name.capitalize + " " + @user.last_name.capitalize , statut: @user.role, photo: @user.photo_url, coordinator: @user.coordinator %>
           </div>
           <div class="col-12">
             <div class="margin-bottom-medium">
@@ -28,17 +28,34 @@
           </div>
         </div>
         <div class="col-12">
+
           <p class="white">Mission en cours :</p>
-          <% if @missions_live.length == 0 %>
+          <% if @missions_booked.length == 0 %>
           <p class="yellow margin-bottom-big">Aucune mission en cours actuellement.</p>
           <% end %>
-          <% @missions_live.each do |mission| %>
+          <% @missions_booked.each do |mission| %>
             <%= render "shared/capsule", title: mission.name, color: "#F15757", url: "", subtitle: "en cours", icon: "fas fa-spinner" %>
           <% end %>
+
+
+
           <p class="white">Mission disponibles :</p>
-          <%= render "shared/capsule", title: "Organiser un cours de cuisine", color: "#2A336A", url: "", subtitle: "à faire avant 10 avril 2018", icon: "fas fa-bullhorn" %>
+          <% if @missions_todo.length == 0 %>
+          <p class="yellow margin-bottom-big">Aucune mission disponibles actuellement.</p>
+          <% end %>
+          <% @missions_todo.each do |mission| %>
+            <%= render "shared/capsule", title: mission.name, color: "#2A336A", url: "", subtitle: "à faire avant 10 avril 2018", icon: "fas fa-bullhorn" %>
+          <% end %>
+
+
           <p class="white">Mission réalisées :</p>
-          <%= render "shared/capsule", title: "Faire venir 150 personnes", color: "#CE1F5B", url: "", subtitle: "groupe facebook amis du ribéracois", icon: "fas fa-check" %>
+          <% if @missions_booked.length == 0 %>
+          <p class="yellow margin-bottom-big">Aucune mission réalisées pour l'instant.</p>
+          <% end %>
+          <% @missions_done.each do |mission| %>
+            <%= render "shared/capsule", title: mission.name, color: "#CE1F5B", url: "", subtitle: "terminée", icon: "fas fa-check" %>
+          <% end %>
+
         </div>
       </div>
       <div class="col-md-2">
