--- a/app/views/shared/_portrait.html.erb
+++ b/app/views/shared/_portrait.html.erb
@@ -4,7 +4,7 @@
     <h4><%= name %></h4>
     <h6 class="subtalent"><%= statut %></h6>
     <%= link_to coordinator_dashboard_path(coordinator) do %>
-      <h6 class="subtalent water-green"><%= "coordinator : " + coordinator.first_name + " " + coordinator.last_name %></h6>
+      <h6 class="subtalent water-green"><%= "coordinator : " + coordinator.first_name.capitalize + " " + coordinator.last_name.capitalize %></h6>
     <% end %>
   </div>
 </div>
