Change mission capsule, reorganize score, add animation on badge...

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Oswald:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Roboto+Condensed:400,700");
 
 // Define fonts for body and headers
 $body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: 'Raleway', sans-serif;
+$headers-font: 'Roboto+Condensed', sans-serif;
 $button-font-size: 16px;
 $font-size-base: 0.9rem;
 $font-family-sans-serif:  $body-font;
