--- a/app/views/shared/_badge.html.erb
+++ b/app/views/shared/_badge.html.erb
@@ -1,5 +1,7 @@
-<div class="badge">
-  <div class="badge-color" style="background-color: <%= color %>">
-    <i class="<%= icon %>"></i>
+<%= link_to url do %>
+  <div class="badge">
+    <div class="badge-color" style="background-color: <%= color %>">
+      <i class="<%= icon %>"></i>
+    </div>
   </div>
-</div>
+<% end %>
