--- a/app/assets/stylesheets/components/_badge.scss
+++ b/app/assets/stylesheets/components/_badge.scss
@@ -20,4 +20,8 @@
     justify-content: center;
     align-items: center;
   }
+  &:hover {
+    animation-name: pulse;
+    animation-duration: 1s;
+  }
 }
