--- a/app/views/ambassador/users/show.html.erb
+++ b/app/views/ambassador/users/show.html.erb
@@ -8,9 +8,9 @@
           </div>
           <div class="col-12">
             <div class="margin-bottom-medium">
+              <%= render "shared/skills", title: "score", text: @user.score, type: "pts", total: "", color:"#2A336A" %>
               <%= render "shared/skills", title: "classement mondial", text: "48", type: "ème", total: "1300", color:"#CE1F5B" %>
               <%= render "shared/skills", title: "classement national", text: "3", type: "ème", total: "35", color:"#7CBB9F" %>
-              <%= render "shared/skills", title: "score", text: @user.score, type: "pts", total: "", color:"#2A336A" %>
               <%= render "shared/skills", title: "succès", text: @user.own_achievements.length, type: "", total: "", color:"#E67E22" %>
             </div>
           </div>
@@ -20,11 +20,11 @@
       <div class="col-12 col-md-6">
         <div class="col-12">
           <div class="margin-bottom-medium">
-            <%= render "shared/badge", icon: "fab fa-angrycreative", color: "#7CBB9F" %>
-            <%= render "shared/badge", icon: "fab fa-avianex", color: "#CE1F5B" %>
-            <%= render "shared/badge", icon: "fas fa-birthday-cake", color: "#2A336A" %>
-            <%= render "shared/badge", icon: "fas fa-chess-knight", color: "#E67E22" %>
-            <%= render "shared/badge", icon: "far fa-gem", color: "#7CBB9F" %>
+            <%= render "shared/badge", url: "", icon: "fab fa-angrycreative", color: "#7CBB9F" %>
+            <%= render "shared/badge", url: "", icon: "fab fa-avianex", color: "#CE1F5B" %>
+            <%= render "shared/badge", url: "", icon: "fas fa-birthday-cake", color: "#2A336A" %>
+            <%= render "shared/badge", url: "", icon: "fas fa-chess-knight", color: "#E67E22" %>
+            <%= render "shared/badge", url: "", icon: "far fa-gem", color: "#7CBB9F" %>
           </div>
         </div>
         <div class="col-12">
@@ -34,7 +34,10 @@
           <p class="yellow margin-bottom-big">Aucune mission en cours actuellement.</p>
           <% end %>
           <% @missions_booked.each do |mission| %>
-            <%= render "shared/capsule", title: mission.name, color: "#F15757", url: "", subtitle: "en cours", icon: "fas fa-spinner" %>
+            <%= render "shared/capsule", title: mission.name, color: "#F15757",
+                                                              url: mission_path(mission),
+                                                              subtitle: "en cours",
+                                                              icon: "fas fa-spinner" %>
           <% end %>
 
 
@@ -44,7 +47,11 @@
           <p class="yellow margin-bottom-big">Aucune mission disponibles actuellement.</p>
           <% end %>
           <% @missions_todo.each do |mission| %>
-            <%= render "shared/capsule", title: mission.name, color: "#2A336A", url: "", subtitle: "à faire avant 10 avril 2018", icon: "fas fa-bullhorn" %>
+            <%= render "shared/capsule", title: mission.name, color: "#2A336A",
+                                                              url: mission_path(mission),
+                                                              subtitle: "à faire avant 10 avril 2018",
+                                                              icon: "fas fa-plus",
+                                                              score: mission.score %>
           <% end %>
 
 
@@ -67,5 +74,3 @@
     </div>
   </div>
 </div>
-
-
