--- a/app/assets/stylesheets/components/_helpers.scss
+++ b/app/assets/stylesheets/components/_helpers.scss
@@ -103,6 +103,13 @@ $input-height: 56px;
   height: 5px;
   background-color: $yellow;
 }
+.bar-separator-inner {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 100%;
+  height: 2px;
+  background-color: $gray;
+}
 
 .underline {
   border-bottom: $border-medium;
