--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,5 @@
 // Import your components CSS files here.
+@import "animate";
 @import "helpers";
 @import "alert";
 @import "button";
@@ -14,4 +15,4 @@
 @import "registration";
 @import "button";
 @import "badge";
-@import "animate";
+@import "ressources";
