--- a/app/assets/stylesheets/layouts/_dashboard.scss
+++ b/app/assets/stylesheets/layouts/_dashboard.scss
@@ -2,6 +2,7 @@
   min-height: calc(100vh - 70px);
   width: 100%;
   background-color: $blue;
+  color: white;
   .activities {
     color: $white;
     text-align: center;
