Convert variable to partial on capsule as hash, fix text color

--- a/app/views/ambassador/users/show.html.erb
+++ b/app/views/ambassador/users/show.html.erb
@@ -34,12 +34,15 @@
           <p class="yellow margin-bottom-big">Aucune mission en cours actuellement.</p>
           <% end %>
           <% @missions_booked.each do |user_mission| %>
-            <%= render "shared/capsule", title: user_mission.mission.name, color: "#F15757",
-                                                              url: mission_path(user_mission.mission),
-                                                              method: :get,
-                                                              subtitle: "en cours",
-                                                              icon: "fas fa-spinner",
-                                                              score: user_mission.mission.score %>
+            <%= render "shared/capsule",  content: {
+                                                    title: user_mission.mission.name,
+                                                    color: "#F15757",
+                                                    url: mission_path(user_mission.mission),
+                                                    method: :get,
+                                                    subtitle: "en cours",
+                                                    icon: "fas fa-spinner",
+                                                    score: user_mission.mission.score,
+                                                    } %>
           <% end %>
 
 
@@ -49,12 +52,15 @@
           <p class="yellow margin-bottom-big">Aucune mission disponibles actuellement.</p>
           <% end %>
           <% @missions_todo.each do |mission| %>
-            <%= render "shared/capsule", title: mission.name, color: "#2A336A",
-                                                              url: mission_path(mission),
-                                                              method: :get,
-                                                              subtitle: "à faire avant 10 avril 2018",
-                                                              icon: "fas fa-plus",
-                                                              score: mission.score %>
+            <%= render "shared/capsule", content: {
+                                                    title: mission.name,
+                                                    color: "#2A336A",
+                                                    url: mission_path(mission),
+                                                    method: :get,
+                                                    subtitle: "à faire avant 10 avril 2018",
+                                                    icon: "fas fa-plus",
+                                                    score: mission.score
+                                                    } %>
           <% end %>
 
 
@@ -63,13 +69,14 @@
           <p class="yellow margin-bottom-big">Aucune mission réalisées pour l'instant.</p>
           <% end %>
           <% @missions_done.each do |user_mission| %>
-            <%= render "shared/capsule", title: user_mission.mission.name,
-                                         color: "#CE1F5B",
-                                         url: "",
-                                         method: :get,
-                                         subtitle: "terminée",
-                                         icon: "fas fa-check",
-                                         score: "" %>
+            <%= render "shared/capsule", content: {
+                                                    title: user_mission.mission.name,
+                                                    score: user_mission.mission.score,
+                                                    color: "#CE1F5B",
+                                                    method: :get,
+                                                    subtitle: "terminée",
+                                                    icon: "fas fa-check",
+                                                    } %>
           <% end %>
 
         </div>
