--- a/app/assets/stylesheets/components/_capsule.scss
+++ b/app/assets/stylesheets/components/_capsule.scss
@@ -8,6 +8,7 @@
   margin: 25px 0 25px 0;
   border-radius: 100px;
   background-color: white;
+  color: $dark-gray;
   // box-shadow: $shadow;
   text-transform: uppercase;
   text-align: left;
@@ -73,6 +74,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-position: center center;
+  background-size: cover;
   h2 {
     margin: 0;
   }
