--- a/app/assets/stylesheets/components/_portrait.css.scss
+++ b/app/assets/stylesheets/components/_portrait.css.scss
@@ -8,6 +8,7 @@
   border-radius: 8px;
   box-shadow: $shadow;
   text-align: center;
+  color: $dark-gray;
   .photo {
     margin: auto;
     width: 125px;
