--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -31,29 +31,29 @@
         <h4>Mission en cours :</h4>
         <% if current_user.user_missions.where(mission: @mission).nil? %>
           <% current_user.user_missions.where(mission: @mission).each do |user_mission| %>
-            <%= render "shared/capsule", title: "Mission en cours", color: "#2A336A",
-                                                              url: "",
-                                                              method: "",
-                                                              subtitle: "à faire avant le 10 avril 2018",
-                                                              icon: "fas fa-spinner",
-                                                              score: @mission.score %>
+            <%= render "shared/capsule", content: { title: "Mission en cours",
+                                                    color: "#7CBB9F",
+                                                    url: "TODO :set mission to done",
+                                                    method: "",
+                                                    subtitle: "à faire avant le 10 avril 2018",
+                                                    icon: "fas fa-check",
+                                                    score: @mission.score } %>
           <% end %>
         <% else %>
           <p class="yellow">Aucune mission de ce type en cours.</p>
         <% end %>
         <h4>Commencer cette mission :</h4>
-        <%= render "shared/capsule", title: "Ajouter cette mission", color: "#2A336A",
-                                                          url: mission_user_missions_path(@mission),
-                                                          method: :post,
-                                                          subtitle: "à faire avant le 10 avril 2018",
-                                                          icon: "fas fa-plus",
-                                                          score: @mission.score %>
-        <%= render "shared/capsule", title: "Annuler la mission", color: "#EE5F5B",
-                                                          url: "destroy mission",
-                                                          method: "",
-                                                          subtitle: "",
-                                                          icon: "fas fa-minus",
-                                                          score: "" %>
+        <%= render "shared/capsule", content: { title: "Ajouter cette mission",
+                                                color: "#2A336A",
+                                                url: mission_user_missions_path(@mission),
+                                                method: :post,
+                                                subtitle: "à faire avant le 10 avril 2018",
+                                                icon: "fas fa-plus",
+                                                score: @mission.score } %>
+        <%= render "shared/capsule", content: { title: "Annuler la mission",
+                                                color: "#EE5F5B",
+                                                url: "destroy mission",
+                                                icon: "fas fa-minus" } %>
       </div>
       </div>
     </div>
