--- a/app/views/shared/_capsule.html.erb
+++ b/app/views/shared/_capsule.html.erb
@@ -2,7 +2,7 @@
   <div class="capsule <%= "clickable" if content[:url].to_s.size > 5 %>">
     <div class="capsule-text">
       <p class="talent"><%= content[:title] %></p>
-      <p class="subtalent"><strong><%= "#{content[:score]} pts" unless content[:score].to_s.size == 0 %></strong> <%= "- à faire avant le 14 mai 2018" unless content[:score].to_s.size == 0 %></p>
+      <p class="subtalent"><strong><%= "#{content[:score]} pts" unless content[:score].to_s.size == 0 %></strong> <%= "- à faire avant le 14 mai 2018" if content[:color].to_s.size == 0 %></p>
     </div>
     <div class="capsule-badge" style="background-color: <%= content[:color] %>; background-image: url(<%= content[:photo].to_s %>);">
       <i class="<%= content[:icon] %>" aria-hidden="true"></i>
