--- a/app/views/coordinator/users/show.html.erb
+++ b/app/views/coordinator/users/show.html.erb
@@ -8,7 +8,7 @@
                                           name: @user.full_name,
                                           statut: @user.role,
                                           photo: @user.remote_photo_url,
-                                          manager: "@user.supervisor"
+                                          link: root_path,
                                           } %>
           </div>
           <div class="col-12">
