--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -42,8 +42,13 @@
 /* Navbar link */
 .navbar-wagon-link {
   color: #616668;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
+
+#flag {
+  font-size: 1.3rem;
+}
+
 .navbar-wagon-link:hover {
   color: #da552f;
   text-decoration: none;
