--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
 
       <!-- Links when logged in -->
       <%= link_to "Leaderboard", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Dashboard", ambassador_dashboard_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Dashboard", user_dashboard(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Ressources", resources_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
 
