--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -5,29 +5,57 @@
   data-markers="<%= @markers.to_json %>"
 ></div>
 
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <ul>
-        <% @missions.each do |mission| %>
-          <li><%= mission.name %></li>
-        <% end %>
-      </ul>
-    </div>
-    <div class="col-md-4">
-      <ul>
-        <% @best_coordinators.each do |coordinator| %>
-          <li><%= coordinator.full_name %></li>
-        <% end %>
-      </ul>
-    </div>
-    <div class="col-md-4">
-      <ul>
-        <% @best_ambassadors.each do |ambassador| %>
-          <li><%= ambassador.full_name %></li>
-        <% end %>
-      </ul>
+<div class="double-padding-box dashboard">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>LES DERNIÈRES<br>ACTIONS :</h3>
+        <ul class="list-unstyled">
+          <% @user_missions.each do |user_mission| %>
+            <li>
+              <%= render 'shared/capsule', content:     {
+                url: mission_path(user_mission.mission),
+                method: :get,
+                title: user_mission.name,
+                score: user_mission.score,
+                country_code: user_mission.code
+              } %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h3>NOS MEILLEURS<br>COORDINATORS :</h3>
+        <ul class="list-unstyled">
+          <% @best_coordinators.each do |coordinator| %>
+            <li>
+              <%= render 'shared/capsule', content:     {
+                url: coordinator_dashboard_path(coordinator),
+                method: :get,
+                title: coordinator.full_name,
+                score: coordinator.score,
+                photo: coordinator.photo_url
+              } %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h3>NOS MEILLEURS<br>AMBASSADEURS :</h3>
+        <ul class="list-unstyled">
+          <% @best_ambassadors.each do |ambassador| %>
+            <li>
+              <%= render 'shared/capsule', content:     {
+                url: ambassador_dashboard_path(ambassador),
+                method: :get,
+                title: ambassador.full_name,
+                score: ambassador.score,
+                photo: ambassador.photo_url
+              } %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
